C4: Implement ProductController with full CRUD endpoints, search, stock update, validation, global exception handling, data seeding, and DTO mapping. All endpoints return proper HTTP status codes and JSON responses. Tests passing.